force-app/main/default/objects/Account/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost: Competitor</fullName>
            </value>
            <value>
                <fullName>Lost: Price</fullName>
            </value>
            <value>
                <fullName>Lost: Product Features</fullName>
            </value>
            <value>
                <fullName>Lost: Project Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>