force-app/main/default/objects/Account/fields/LatestSalesActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LatestSalesActivityDate__c</fullName>
    <label>最新活動日（SalesActivity）</label>
    <summarizedField>SalesActivity__c.ActivityDateTime__c</summarizedField>
    <summaryForeignKey>SalesActivity__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>