force-app/main/default/objects/Account/fields/Support_Plan_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Plan_Expiration_Date__c</fullName>
    <label>Support Plan Expiration Date</label>
    <type>Date</type>
</CustomField>